@@ -82,6 +82,7 @@ class MusicBrainz
        EXPORT bool     SetResultRDF     (string &RDFObject);
 
        EXPORT void     GetIDFromURL     (const string &url, string &id);
+       EXPORT bool     CalculateSha1    (const string &fileName, string &sha1);
        EXPORT bool     CalculateBitprint(const string &fileName,
                                          BitprintInfo *info);
 #ifdef WIN32
